edited html layout

--- a/js-aimtrainer-frontend/index.html
+++ b/js-aimtrainer-frontend/index.html
@@ -5,6 +5,29 @@
     <title></title>
   </head>
   <body>
-   Sample text - replace me! 
+<div>
+    <div id="title">
+        <h1>Aim Trainer</h1>
+    </div>
+    <div id="current_user">
+
+    </div>
+    <div id="login">
+
+    </div>
+    <div id="signup">
+
+    </div>
+    <div id="game">
+
+    </div>
+    <div id="high_scores">
+
+    </div>
+    <div id="comments">
+        
+    </div>
+</div>
+
   </body>
 </html>
