--- a/js-aimtrainer-frontend/index.html
+++ b/js-aimtrainer-frontend/index.html
@@ -5,18 +5,20 @@
     <title></title>
   </head>
   <body>
-<div>
+<div id="application">
     <div id="title">
         <h1>Aim Trainer</h1>
     </div>
-    <div id="current_user">
+    <div id="user">
+        <div id="current_user">
 
-    </div>
-    <div id="login">
+        </div>
+        <div id="login">
 
-    </div>
-    <div id="signup">
+        </div>
+        <div id="signup">
 
+        </div>
     </div>
     <div id="game">
 
@@ -25,7 +27,7 @@
 
     </div>
     <div id="comments">
-        
+
     </div>
 </div>
 
