--- a/js-aimtrainer-frontend/index.html
+++ b/js-aimtrainer-frontend/index.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Aim Trainer</title>
   </head>
   <body>
+<script type="application/javascript" src="src/index.js" charset="UTF-8"></script>
 <div id="application">
     <div id="title">
         <h1>Aim Trainer</h1>
