--- a/js-aimtrainer-frontend/index.html
+++ b/js-aimtrainer-frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Aim Trainer</title>
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
 <script type="application/javascript" src="src/index.js" charset="UTF-8"></script>
