added login and signup javascript

--- a/js-aimtrainer-frontend/index.html
+++ b/js-aimtrainer-frontend/index.html
@@ -20,14 +20,14 @@
               <h4>Login</h4>
               <label for="username" id="form-label">Username:</label><br>
               <input type="text" name="username" id="username=login"><br><br>
-              <button class="button" id="loginButton">Log In</button>
+              <button class="button" id="logInButton">Log In</button>
             </div>
             <div id="signup" class="form">
               <form id="user-signup">
                 <h4>Sign Up</h4>
                 <label for="username" id="form-label">Username:</label><br>
                 <input type="text" name="username" id="username-signup"><br><br>
-                <button class="button" id="signupButton">Sign Up</button>
+                <button class="button" id="signUpButton">Sign Up</button>
               </form>
             </div>
         </div>
