--- a/js-aimtrainer-frontend/index.html
+++ b/js-aimtrainer-frontend/index.html
@@ -50,6 +50,7 @@
           <button id="commentButton">Submit</button>
         </form>
       </div>
+      <div class="comment-list"></div>
       <script defer type="application/javascript" src="src/index.js" charset="UTF-8"></script>
   </body>
 </html>
