modified comment function

--- a/js-aimtrainer-frontend/index.html
+++ b/js-aimtrainer-frontend/index.html
@@ -42,12 +42,12 @@
           <h4>High scores</h4>
       </div>
     </div>
-      <div id="comments" class="form">
+      <div id="comments-section" class="form">
         <h4 id="comment-title">Comments</h4>
         <form id="comment-form">
           <label for="comment" id="form-label">New Comment:</label><br>
           <input type="text" name="new_comment" id="newUserComment"><br><br>
-          <button id="commentButton">Submit</button>
+          <button id="newCommentButton">Submit</button>
         </form>
       </div>
       <div class="comment-list"></div>
