styled comment box

--- a/js-aimtrainer-frontend/index.html
+++ b/js-aimtrainer-frontend/index.html
@@ -42,14 +42,17 @@
           <h4>High scores</h4>
       </div>
     </div>
+    <br>
       <div id="comments-section" class="form">
         <h4 id="comment-title">Comments</h4>
         <form id="comment-form">
           <label for="comment" id="form-label">New Comment:</label><br>
-          <input type="text" name="new_comment" id="newUserComment"><br><br>
+          <input type="textarea" name="new_comment" id="newUserComment"><br><br>
           <button id="newCommentButton">Submit</button>
         </form>
       </div>
+      <br>
+      <br>
       <div class="comment-list"></div>
       <script defer type="application/javascript" src="src/index.js" charset="UTF-8"></script>
   </body>
