added canvas html

--- a/js-aimtrainer-frontend/index.html
+++ b/js-aimtrainer-frontend/index.html
@@ -35,7 +35,7 @@
       </div>
       
       <div id="game">
-        <h4>GAME</h4>
+        <canvas id="game-canvas"></canvas>
       </div>
       
       <div id="high_scores">
