--- a/js-aimtrainer-frontend/index.html
+++ b/js-aimtrainer-frontend/index.html
@@ -55,5 +55,6 @@
       <br>
       <div class="comment-list"></div>
       <script defer type="application/javascript" src="src/index.js" charset="UTF-8"></script>
+      <script defer type="application/javascript" src="src/game.js" charset="UTF-8"></script>
   </body>
 </html>
