--- a/js-aimtrainer-frontend/index.html
+++ b/js-aimtrainer-frontend/index.html
@@ -14,6 +14,11 @@
         <div id="user">
             <div>
               <h4 id="current-user">Not Logged In</h4>
+              <div id="logOut" class="form">
+                <form id="user-logOut">
+                <button class="button" id="logOutButton">Log Out</button>
+                </form>
+              </div>
             </div>
             <div id="login" class="form">
               <form id="user-login">
