modified highscore function

--- a/js-aimtrainer-frontend/index.html
+++ b/js-aimtrainer-frontend/index.html
@@ -43,7 +43,7 @@
         <canvas id="game-canvas"></canvas>
       </div>
       
-      <div id="high_scores">
+      <div id="high-scores">
           <h4>High scores</h4>
       </div>
     </div>
