high score function

--- a/js-aimtrainer-frontend/index.html
+++ b/js-aimtrainer-frontend/index.html
@@ -24,7 +24,8 @@
               <form id="user-login">
               <h4>Login</h4>
               <label for="username" id="form-label">Username:</label><br>
-              <input type="text" name="username" id="username-login"><br><br>
+              <input type="text" name="username" id="username-login">
+              <input type="hidden" name="hiddenUserId" id="userId"><br><br>
               <button class="button" id="logInButton">Log In</button>
               </form>
             </div>
