changed high score accuracy type

--- a/js-aimtrainer-frontend/index.html
+++ b/js-aimtrainer-frontend/index.html
@@ -44,7 +44,7 @@
         <canvas id="game-canvas"></canvas>
       </div>
       
-      <div id="high-scores">
+      <div class="high-scores">
           <h4>High scores</h4>
       </div>
     </div>
