--- a/js-aimtrainer-frontend/index.html
+++ b/js-aimtrainer-frontend/index.html
@@ -12,7 +12,7 @@
     <div id="application">
       <div id="user-info">
         <div id="user">
-            <div>
+            <div id="loggedInUser">
               <h4 id="current-user">Not Logged In</h4>
               <div id="logOut" class="form">
                 <form id="user-logOut">
@@ -52,7 +52,7 @@
       <div id="comments-section" class="form">
         <h4 id="comment-title">Comments</h4>
         <form id="comment-form">
-          <label for="comment" id="form-label">New Comment:</label><br>
+          <label for="comment" id="form-label">Post a New Comment:</label><br>
           <input type="textarea" name="new_comment" id="newUserComment"><br><br>
           <button id="newCommentButton">Submit</button>
         </form>
