--- a/js-aimtrainer-frontend/index.html
+++ b/js-aimtrainer-frontend/index.html
@@ -53,11 +53,10 @@
         <h4 id="comment-title">Comments</h4>
         <form id="comment-form">
           <label for="comment" id="form-label">Post a New Comment:</label><br>
-          <input type="textarea" name="new_comment" id="newUserComment"><br><br>
+          <input type="textbox" name="new_comment" id="newUserComment"><br><br>
           <button id="newCommentButton">Submit</button>
         </form>
       </div>
-      <br>
       <br>
       <div class="comment-list"></div>
       <script defer type="application/javascript" src="src/index.js" charset="UTF-8"></script>
