added dark mode feature

--- a/js-aimtrainer-frontend/index.html
+++ b/js-aimtrainer-frontend/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet"type="text/css" href="styles/main.css">
   </head>
   <body>
+    <button id="dark-mode">Toggle Dark Mode</button>
     <div id="title">
         <h1>Aim Trainer</h1>
     </div>
